--- a/.github/workflows/velox_nightly.yml
+++ b/.github/workflows/velox_nightly.yml
@@ -13,7 +13,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Build bundle package
+name: Velox backend nightly release
+
+on:
+  pull_request:
+    paths:
+      - '.github/workflows/velox_nightly.yml'
+  schedule:
+    - cron: '0 0 * * *'
 
 env:
   ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
@@ -23,31 +30,13 @@ concurrency:
   group: ${{ github.repository }}-${{ github.head_ref || github.sha }}-${{ github.workflow }}
   cancel-in-progress: true
 
-on:
-  workflow_dispatch:
-    inputs:
-      spark:
-        description: 'Spark version: spark-3.2, spark-3.3, spark-3.4 or spark-3.5'
-        required: true
-        default: 'spark-3.5'
-      hadoop:
-        description: 'Hadoop version: 2.7.4, 3.2.0, 3.2.2, 3.3.1, 3.3.3 or 3.3.6'
-        required: true
-        default: '3.3.3'
-      ref:
-        description: 'Checkout repo ref to build'
-        required: true
-        default: 'main'
-
 jobs:
   build-native-lib:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.inputs.ref }}
       - name: Get Ccache
-        uses: actions/cache/restore@v3
+        uses: actions/cache/restore@v4
         with:
           path: '${{ env.CCACHE_DIR }}'
           key: ccache-centos7-release-default-${{github.sha}}
@@ -73,7 +62,7 @@ jobs:
       - name: Upload Artifact Arrow Jar
         uses: actions/upload-artifact@v4
         with:
-          path: ${{ github.workspace }}/.m2/repository/org/apache/arrow/
+          path: .m2/repository/org/apache/arrow/
           name: velox-arrow-jar-centos-7-${{github.sha}}
 
   build-bundle-package-centos8:
@@ -82,8 +71,6 @@ jobs:
     container: centos:8
     steps:
       - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.inputs.ref }}
       - name: Download All Artifacts
         uses: actions/download-artifact@v4
         with:
@@ -102,16 +89,20 @@ jobs:
           wget https://downloads.apache.org/maven/maven-3/3.8.8/binaries/apache-maven-3.8.8-bin.tar.gz && \
           tar -xvf apache-maven-3.8.8-bin.tar.gz && \
           mv apache-maven-3.8.8 /usr/lib/maven
-      - name: Build for Spark ${{ github.event.inputs.spark }}
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+      - name: Build for Spark 3.5
         run: |
           cd $GITHUB_WORKSPACE/ && \
           export MAVEN_HOME=/usr/lib/maven && \
           export PATH=${PATH}:${MAVEN_HOME}/bin && \
-          mvn clean install -P${{ github.event.inputs.spark }} -Dhadoop.version=${{ github.event.inputs.hadoop }} -Pbackends-velox -Pceleborn -Puniffle -DskipTests -Dmaven.source.skip
+          mvn clean install -Pspark-3.5 -Pbackends-velox -Pceleborn -Puniffle -DskipTests -Dmaven.source.skip
       - name: Upload bundle package
         uses: actions/upload-artifact@v4
         with:
-          name: gluten-velox-bundle-package
+          name: nightly-gluten-velox-bundle-package-spark35-${{ steps.date.outputs.date }}
           path: package/target/gluten-velox-bundle-*.jar
           retention-days: 7
+
 
